get access token

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <h1>Angular with LINE Login</h1>
   <hr>
   <img [src]="pictureUrl" width="300px" height="300px"/>
-  <p style="text-align: left; margin-left: 20%;"><b>id token: </b> {{ idToken }}</p>
+  <p style="text-align: left; margin-left: 20%;"><b>access token: </b> {{ accessToken }}</p>
   <p style="text-align: left; margin-left: 20%;"><b>display name: </b> {{ displayName }}</p>
   <p style="text-align: left; margin-left: 20%;"><b>status message: </b> {{ statusMessage }}</p>
   <p style="text-align: left; margin-left: 20%;"><b>user id: </b> {{ userId }}</p>
